commit dois - estudos HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords"    content="primerio site HTML,site em HTML">                               <!-- Onde sao definidos palavras chaves para encontrar o site ( Temas que o site aborda ) -->
     <meta name="author"      content="Lucas Delfino Cordeiro">                                        <!-- Aqui onde registra o autor do site -->
 
-    <title>Meu site em HTML</title>
+    <title>Estudos em HTML</title>
 
 </head>
 
@@ -41,11 +41,11 @@
      
     -->
 
-    <h1>Meu site em HTML</h1>
+    <h1>Meus estudos em HTML</h1>
 
         <hr>
 
-        <p>
+        <p> 
 
             Este é o meu <strong> primeiro site </strong> em foi criado com o objetivo de  estudar e praticar
             <abbr title="Hyper text markup language"> HTML </abbr>.  
@@ -59,6 +59,65 @@
         </p>
 
         <hr>
+
+    <h2> Separação dos estudos </h2>
+
+        <p>
+
+            Os estudos serão organizados por temas, seguindo a ordem de cada aula realizada. Cada tema terá uma seção própria, onde será registrado o conteúdo estudado 
+            no respectivo dia. Nessas seções, serão incluídas anotações pessoais, resumos e explicações breves sobre cada tópico abordado, 
+            com o objetivo de reforçar o aprendizado e facilitar futuras revisões. Dessa forma, será possível acompanhar o progresso nos estudos de HTML 
+            e consultar rapidamente os principais conceitos aprendidos em cada etapa.
+
+        </p>
+
+    <h3> Estudos de Tags</h3>
+
+        <p>
+
+            <hr>
+
+            <br>
+
+            <strong> que são tags: </strong>
+
+            <br><br>
+
+            Tags são comandos usados no HTML para definir a estrutura e o conteúdo de uma página web. Elas indicam ao navegador como exibir textos, imagens, links, títulos, 
+            parágrafos e outros elementos. Normalmente, uma tag tem uma abertura e um fechamento, envolvendo o conteúdo que será exibido.
+
+            <br><br>
+
+        </p>
+
+        <p>
+
+            
+            <hr>
+
+            <br>
+
+            <strong> Tipos de tags </strong>
+
+            <br><br>
+
+            Tag b - Deixa o texto em negrito, mas sem dar ênfase especial ao conteúdo. <br>
+            Tag strong - Deixa o texto em negrito e indica que é importante (semântica). <br>
+            Tag u - Sublinha o texto. <br>
+            Tag i - Deixa o texto em itálico, usado para palavras estrangeiras ou termos especiais. <br>
+            Tag small - Deixa o texto menor que o tamanho normal. <br>
+            Tag del - Mostra o texto como riscado, indicando que foi removido ou substituído. <br>
+            Tag mark - Destaca o texto com uma marcação amarela, como se estivesse grifado. <br>
+            Tag sup - Coloca o texto em posição superior, como em potências. <br>
+            Tag sub - Coloca o texto em posição inferior, como em fórmulas químicas. <br>
+            Tag hr -  Cria uma linha horizontal de separação entre conteúdos. <br>
+            Tag br -  Quebra a linha, fazendo o texto continuar na linha de baixo. <br>
+
+            <br><br>
+
+            <hr>
+
+        </p>
 
 </body>
 
