--- a/index.html
+++ b/index.html
@@ -328,7 +328,27 @@
             
             <br>
             <hr>
+
+        <h3>Estudos de Iframes</h3>
+
+            <p>
+
+                Iframes basicamente da acesso a uma pagina html dentro da sua pagina html, utilizando um Iframe com o atributo src,
+                width, height, e title.
+
+                <br><br>
+
+                <b>Exemplo com um texto aleatorio em latin</b>
+
+                <br><br>
+
+            </p>
+
+            <iframe src="textoLatin.html"  width="80%" height="400" title="Iframe aleatorio"></iframe>
         
+        <br><br>
+
+        <hr>
 
 </body>
 
