--- a/index.html
+++ b/index.html
@@ -364,6 +364,40 @@
 
             <hr>
 
+        <h3>Estudos de Audio</h3>
+
+            <p>
+
+
+                A tag audio em HTML permite adicionar sons, músicas ou efeitos sonoros a uma página da web. Com ela, é possível exibir um player com botões de controle (play, pause, volume), escolher se o áudio vai começar automaticamente (autoplay), repetir sem parar (loop), ficar oculto (hidden) ou iniciar sem som (muted). Também é possível usar diferentes formatos de áudio com múltiplas fontes para garantir compatibilidade com vários navegadores.
+
+                <br><br>
+
+                Aqui eu irei criar um link que leva para uma pagina que contem somente estudos de audio :
+
+            </p>
+
+            <a href="audio.html" >Audio</a>
+
+            <hr>
+
+
+        <h3>Estudos de Video</h3>
+
+            <p>
+
+                A tag video em HTML permite incorporar vídeos diretamente em uma página da web. Com ela, é possível mostrar um player com botões de controle (play, pause, volume, tela cheia), fazer o vídeo começar automaticamente (autoplay), repetir em loop (loop), esconder os controles (controls), deixar o vídeo mudo (muted) ou ajustar o tamanho com width e height. Também dá para usar várias fontes para garantir que o vídeo funcione em todos os navegadores.
+
+                <br><br>
+
+                Aqui eu irei criar um link que leva para uma pagina que contem somente estudos de video :
+
+            </p>
+
+            <a href="video.html" >Video</a>
+
+            <hr>
+
 </body>
 
 </html>
