--- a/audio.html
+++ b/audio.html
@@ -7,14 +7,17 @@
 </head>
 <body>
 
+    <!-- Titulo do site -->
     <h1>Seja bem-vindo aos estudos de audio em HTML </h1>
 
+        <!-- Acesso a pagina principal -->
         <a href="index.html">Voltar a página principal</a>
 
         <br>
 
         <p>
 
+            <!-- Explicação da tag audio -->
             Em HTML, a tag audio permite adicionar sons e músicas a uma página. Para funcionar, você usa audio com o atributo controls para exibir os botões de reprodução. Dentro dela, vai a tag source, que indica o caminho (src) e o tipo (type) do arquivo de áudio. Exemplo: audio controls source src="som.mp3" type="audio/mpeg". Isso exibe um player para o usuário ouvir o som.
 
             <br><br>
@@ -25,6 +28,7 @@
 
         </p>
 
+        <!-- Exemplo da tag -->
         <audio controls controlsList="nodowload">
 
             <source src="audios/rain.mp3" type="audio/mpeg">
