--- a/video.html
+++ b/video.html
@@ -7,14 +7,18 @@
 </head>
 <body>
 
+
+    <!-- Titulo da pagina -->
     <h1>Seja bem-vindo aos estudos video em HTML</h1>
 
+        <!-- Acesso a pagina principal -->
         <a href="index.html">Voltar a pagina principal</a>
 
         <br>
 
         <p>
 
+            <!-- Explicação da tag video -->
             Em HTML, a tag video permite mostrar vídeos em uma página. Ela usa o atributo controls para exibir botões como play, pause e volume. Dentro dela, a tag source define o caminho (src) e o tipo (type) do vídeo. Exemplo: video controls source src="video.mp4" type="video/mp4". Isso mostra um player para o usuário assistir ao vídeo.
             
             <br><br>
@@ -23,6 +27,7 @@
 
         </p>
 
+        <!-- Exemplo da tag -->
         <video controls controlsList="nodownload" width="50%" autoplay >
 
             <source src="videos/stream.mp4" type="video/mp4">
