--- a/div.html
+++ b/div.html
@@ -21,6 +21,8 @@
     <!-- Tag semântica  -->
     <nav>
 
+        <a href="index.html">Voltar para página principal</a> <br>
+
         <a href="">Google</a>
         <a href="">Youtube</a>
         <a href="">Instagram</a>
