--- a/index.html
+++ b/index.html
@@ -411,11 +411,25 @@
 
             <hr>
 
+
+        <!-- Div e tag semântica -->
         <h3>Estudos de div e tag semântica</h3>
 
             <p> 
 
+                <strong>Divs</strong>
+
+                <br><br>
+                
                 A div é um elemento usado para agrupar e organizar partes do conteúdo de uma página. Ela não tem estilo próprio, mas serve como um contêiner onde você pode aplicar estilos com CSS ou controlar comportamentos com JavaScript. É muito usada para estruturar o layout do site.
+
+                <br><br>
+
+                <strong>Tags semânticas</strong>
+
+                <br><br>
+
+                Tags semânticas são elementos que descrevem claramente o seu significado tanto para o navegador quanto para os desenvolvedores. Exemplos incluem header, main, section, article, aside e footer. Elas ajudam a organizar melhor o conteúdo, melhoram a acessibilidade e o SEO do site.
 
                 <br><br>
 
